--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello Immersio</title>
+    <title>Hello Immersio! This is a great course!</title>
 </head>
 <body>
     <h1>Hello Immersio!</h1>
