Small addition to the current page.

--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello Immersio! This is a great course!</title>
+    <title>Hello Immersio!</title>
 </head>
 <body>
-    <h1>Hello Immersio!</h1>
+    <h1>Hello Immersio! This is a great course!</h1>
 </body>
 </html>
